force-app/main/default/objects/Invoice__c/fields/API_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>API_Request_ID__c</fullName>
    <label>API Request ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>