force-app/main/default/objects/Invoice__c/fields/API_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Status__c</fullName>
    <label>API Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send Create Request</fullName>
            </value>
            <value>
                <fullName>Send Update Request</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Downloaded Info</fullName>
            </value>
            <value>
                <fullName>Downloaded Attachment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>