force-app/main/default/objects/Invoice__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <formula>Order__r.Client__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Id</label>
    <type>Text</type>
</CustomField>