force-app/main/default/objects/Invoice__c/fields/H_Trigger_Time_05__c.field-meta.xml
<CustomField>
    <fullName>H_Trigger_Time_05__c</fullName>
    <formula>DATETIMEVALUE(CreatedDate)-0.03800</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>H Trigger Time 05</label>
    <type>DateTime</type>
</CustomField>