force-app/main/default/objects/Invoice__c/fields/Invoice_Config_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Config_Type__c</fullName>
    <label>Invoice Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>