force-app/main/default/objects/Invoice__c/fields/Invoice_Items__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Items__c</fullName>
    <label>Invoice Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>