force-app/main/default/objects/Invoice__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request to be Sent</fullName>
            </value>
            <value>
                <fullName>Waiting for Invoice</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>Sent to Client</fullName>
            </value>
            <value>
                <fullName>Invoice Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>