force-app/main/default/objects/Invoice__c/fields/Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type__c</fullName>
    <label>Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Jurisdiction Wise</fullName>
            </value>
            <value>
                <fullName>Business Unit Wise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>