force-app/main/default/objects/Invoice__c/fields/Invoice_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type_Name__c</fullName>
    <label>Invoice Type Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>