force-app/main/default/objects/Invoice__c/fields/Invoice_Version__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Version__c</fullName>
    <label>Invoice Version</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>