force-app/main/default/objects/Invoice__c/fields/Is_Late_Rush_Fee_Included__c.field-meta.xml
<CustomField>
    <fullName>Is_Late_Rush_Fee_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Late &amp; Rush Fee Included</label>
    <type>Checkbox</type>
</CustomField>