force-app/main/default/objects/Invoice__c/fields/Is_Variance__c.field-meta.xml
<CustomField>
    <fullName>Is_Variance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Variance</label>
    <type>Checkbox</type>
</CustomField>