force-app/main/default/objects/Invoice__c/fields/Late_Fee__c.field-meta.xml
<CustomField>
    <fullName>Late_Fee__c</fullName>
    <formula>Order__r.Late_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Late Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>