force-app/main/default/objects/Invoice__c/fields/LEDES_Message__c.field-meta.xml
<CustomField>
    <fullName>LEDES_Message__c</fullName>
    <label>LEDES Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>