force-app/main/default/objects/Invoice__c/fields/LEDES_Status__c.field-meta.xml
<CustomField>
    <fullName>LEDES_Status__c</fullName>
    <label>LEDES Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>NotRequested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>