force-app/main/default/objects/Invoice__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>