force-app/main/default/objects/Invoice__c/fields/Po_Number__c.field-meta.xml
<CustomField>
    <fullName>Po_Number__c</fullName>
    <label>Po Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>