force-app/main/default/objects/Invoice__c/fields/Rush_Fee__c.field-meta.xml
<CustomField>
    <fullName>Rush_Fee__c</fullName>
    <formula>Order__r.Rush_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Rush Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>