force-app/main/default/objects/Invoice__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <displayFormat>V-{0}</displayFormat>
    <label>Version</label>
    <type>AutoNumber</type>
</CustomField>