force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>API_Status__c</columns>
    <columns>API_Request_ID__c</columns>
    <columns>Invoice_No__c</columns>
    <columns>Order__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>