force-app/main/default/objects/Invoice__c/listViews/New_Invoices.listView-meta.xml
<ListView>
    <fullName>New_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Invoice_No__c</columns>
    <columns>Invoice_Status__c</columns>
    <columns>Invoice_Amount__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Invoice_Currency__c</columns>
    <columns>API_Request_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Invoice_Status__c</field>
        <operation>equals</operation>
        <value>Created</value>
    </filters>
    <label>New Invoices</label>
</ListView>